--- a/koha-tmpl/intranet-tmpl/prog/en/modules/acqui/neworderempty_duplicate.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/acqui/neworderempty_duplicate.tt
@@ -52,6 +52,7 @@
 <input type="hidden" name="basketno" value="[% basketno | html %]" />
 <input type="hidden" name="biblionumber" value="[% biblionumber | html %]" />
 <input type="submit" value="Use existing" />
+<input type="hidden" name="use_breedingid" value="[% breedingid | html %]" />
 </form>
 </div>
 </div>
@@ -76,7 +77,7 @@
 <input type="hidden" name="basketno" value="[% basketno | html %]" />
 <input type="hidden" name="breedingid" value="[% breedingid | html %]" />
 <input type="hidden" name="use_external_source" value="1" />
-<input type="submit" value="Create new" />
+<input type="hidden" name="use_breedingid" value="[% breedingid | html%]" />
 </form>
 </div>
 </div>
