--- a/koha-tmpl/intranet-tmpl/prog/en/modules/catalogue/detail.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/catalogue/detail.tt
@@ -381,7 +381,7 @@
                 <tr id="item_[% item.itemnumber | html %]" data-itemnumber="[% item.itemnumber | html %]" data-duedate="[% item.datedue | html %]">
                 [% IF (StaffDetailItemSelection) %]
                     <td style="text-align:center;vertical-align:middle">
-                        [% UNLESS item.cannot_be_edited %]
+                        [% IF item.can_be_edited %]
                             <input type="checkbox" value="[% item.itemnumber | html %]" name="itemnumber" />
                         [% END %]
                     </td>
