--- a/koha-tmpl/intranet-tmpl/prog/en/modules/circ/returns.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/circ/returns.tt
@@ -6,6 +6,7 @@
 [% USE ItemTypes %]
 [% USE AuthorisedValues %]
 [% USE TablesSettings %]
+[% PROCESS 'i18n.inc' %]
 [% PROCESS 'member-display-address-style.inc' %]
 [% SET footerjs = 1 %]
 [% BLOCK display_bormessagepref %]
@@ -217,6 +218,39 @@
                                 </div>
                             [% END %]
 
+                            <!-- Bundle has items missing -->
+                            [% IF missing_items %]
+                                <div id="bundle_missing_items" class="dialog alert">
+                                    <h3>Bundle had missing items</h3>
+                                    <p>Bundle contents list updated</p>
+                                    <p>
+                                        <a class="btn btn-default btn-xs" role="button" data-toggle="modal" href="#bundleContentsModal"><i class="fa fa-eye" aria-hidden="true"></i> View updated contents list</a>
+                                        <a class="btn btn-default btn-xs" role="button" data-toggle="modal" href="#bundleMissingModal"><i class="fa fa-eye" aria-hidden="true"></i> View list of missing items</a>
+                                    </p>
+                                </div>
+                            [% END %]
+
+                            <!-- Bundle contained unexpected items -->
+                            [% IF unexpected_items %]
+                                <div id="bundle_unexpected_items" class="dialog alert">
+                                    <h3>Bundle had unexpected items</h3>
+                                    <p>Please place the following items to one side</p>
+                                    <ul>
+                                    [% FOREACH unexpected_item IN unexpected_items %]
+                                        <li>[% INCLUDE 'biblio-title.inc' biblio=unexpected_item.biblio %] - [% unexpected_item.barcode | html %]</li>
+                                    [% END %]
+                                    </ul>
+                                </div>
+                            [% END %]
+
+                            <!-- Item checked in outside of bundle -->
+                            [% IF InBundle %]
+                                <div id="bundle_item_outside" class="dialog alert audio-alert-warning">
+                                    <h3>Item belongs in bundle</h3>
+                                    <p>This item belongs to a bundle: [% INCLUDE 'biblio-title.inc' biblio=InBundle.biblio %] - [% InBundle.barcode | html %]</p>
+                                    <p><button class="btn btn-default btn-xs bundle_remove" role="button" data-itemnumber="[% itemnumber | uri %]" data-hostnumber="[% InBundle.itemnumber | uri %]"><i class="fa fa-minus"></i> Remove from bundle</button></p>
+                                </div>
+                            [% END %]
 
                             [% IF ( errmsgloop ) %]
                                 <div class="dialog alert audio-alert-warning">
@@ -347,6 +381,14 @@
                                         <p class="ret_checkinmsg">[% checkinmsg | html_line_break %]</p>
                                     </div>
                             [% END # /IF checkinmsg %]
+
+                            [% IF bundle_items && !missing_items %]
+                                <div class="dialog message">
+                                    <h3>Bundle varified</h3>
+                                    <p>The bundle content was varified</p>
+                                    <p><a class="btn btn-default btn-xs" role="button" data-toggle="modal" href="#bundleContentsModal"><i class="fa fa-eye" aria-hidden="true"></i> View contents list</a></p>
+                                </div>
+                            [% END %]
                         [% END # /BLOCK all_checkin_messages %]
 
                         [% IF needs_confirm %]
@@ -379,6 +421,91 @@
                                     </div>
                                 </div>
                             </div>
+                        [% END %]
+
+                        [% IF items_bundle_return_confirmation %]
+                        <div id="bundle-needsconfirmation-modal" class="modal fade audio-alert-action block">
+                            <div class="modal-dialog modal-wide">
+                                <div class="modal-content">
+                                    <form method="post">
+                                        <div class="modal-header">
+                                            <h3>Please confirm bundle contents for [% item.barcode | html %]</h3>
+                                        </div>
+                                        <div class="modal-body">
+
+                                            <table class="table table-condensed table-bordered" id="items-bundle-contents-table">
+                                                <thead>
+                                                    <tr>
+                                                        <th>[% t('Title') | html %]</th>
+                                                        <th>[% t('Author') | html %]</th>
+                                                        <th>[% t('Item type') | html %]</th>
+                                                        <th>[% t('Barcode') | html %]</th>
+                                                        [% IF !item.onloan %]
+                                                        <th>[% t('Status') | html %]</th>
+                                                        [% END %]
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    [% FOREACH bundle_item IN item.bundle_items %]
+                                                    [% IF !item.onloan %]
+                                                    <tr data-barcode="[% bundle_item.barcode | html %]">
+                                                        <td>[% INCLUDE 'biblio-title.inc' biblio=bundle_item.biblio link = 1 %]</td>
+                                                        <td>[% bundle_item.biblio.author | html %]</td>
+                                                        <td>[% ItemTypes.GetDescription(bundle_item.itype) | html %]</td>
+                                                        <td>[% bundle_item.barcode | html %]</td>
+                                                        <td>
+                                                            [% IF bundle_item.itemlost %]
+                                                                [% itemlost_description = AuthorisedValues.GetDescriptionByKohaField({ kohafield = 'items.itemlost', authorised_value = bundle_item.itemlost }) %]
+                                                                <span class="lost">[% itemlost_description | html %]</span>
+                                                            [% ELSE %]
+                                                                Present
+                                                            [% END %]
+                                                        </td>
+                                                    </tr>
+                                                    [% ELSIF !bundle_item.itemlost %]
+                                                    <tr data-barcode="[% bundle_item.barcode | html %]">
+                                                        <td>[% INCLUDE 'biblio-title.inc' biblio=bundle_item.biblio link = 1 %]</td>
+                                                        <td>[% bundle_item.biblio.author | html %]</td>
+                                                        <td>[% ItemTypes.GetDescription(bundle_item.itype) | html %]</td>
+                                                        <td>[% bundle_item.barcode | html %]</td>
+                                                    </tr>
+                                                    [% END %]
+                                                    [% END %]
+                                                </tbody>
+                                            </table>
+
+                                            <div class="form-group">
+                                                <label for="verify-items-bundle-contents-barcodes">Barcodes <span id="verify-progress" class="pull-right" style="display: none"><span id="verified">0</span> of <span id="expected"></span> verified</span></label>
+                                                <textarea autocomplete="off" id="verify-items-bundle-contents-barcodes" name="verify-items-bundle-contents-barcodes" class="form-control"></textarea>
+                                                [% IF item.onloan %]
+                                                <div class="help-block">[% t('Scan all barcodes of items found in the items bundle. If any items are missing, they will be marked as lost') | html %]</div>
+                                                [% ELSE %]
+                                                <div class="help-block">[% t('Optionally scan all barcodes of items found in the items bundle to perform an inventory check. If any items are missing, they will be marked as lost') | html %]</div>
+                                                [% END %]
+                                            </div>
+
+                                            <div id="bundle-feedback" class="alert" style="display:none"></div>
+
+                                        </div>
+                                        <div class="modal-footer">
+                                            <input type="hidden" name="barcode" value="[% item.barcode | html %]">
+                                            <input type="hidden" name="confirm_items_bundle_return" value="1">
+                                            [% FOREACH inputloo IN inputloop %]
+                                            <input type="hidden" name="ri-[% inputloo.counter | html %]" value="[% inputloo.barcode | html %]" />
+                                            <input type="hidden" name="dd-[% inputloo.counter | html %]" value="[% inputloo.duedate | html %]" />
+                                            <input type="hidden" name="bn-[% inputloo.counter | html %]" value="[% inputloo.borrowernumber | html %]" />
+                                            [% END %]
+                                            [% IF item.onloan %]
+                                            <button type="submit" class="btn btn-default"><i class="fa fa-check"></i> [% t('Confirm checkin and mark missing items as lost') | html %]</button>
+                                            [% ELSE %]
+                                            <button type="submit" class="btn btn-default"><i class="fa fa-check"></i> [% t('Confirm inventory check and mark items as lost') | html %]</button>
+                                            [% END %]
+                                            <button type="button" data-dismiss="modal" class="btn btn-default"><i class="fa fa-close"></i> [% t('Cancel') | html %]</button>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
                         [% END %]
 
                         [% IF wrongbranch %]
@@ -1180,6 +1307,46 @@
         [% INCLUDE 'modals/resolve_return_claim.inc' %]
     [% END %]
 
+    [% INCLUDE 'modals/bundle_contents.inc' %]
+
+    [% IF ( missing_items ) %]
+    <!-- Bundle missing modal -->
+    <div class="modal printable" id="bundleMissingModal" tabindex="-1" role="dialog" aria-labelledby="bundleMissingLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="closebtn" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="bundleMissingLabel">Items missing from bundle at checking for [% item.barcode | html %]</h4>
+                </div>
+                <div class="modal-body">
+                    <table style="width:100%">
+                        <thead>
+                            <tr>
+                                <th>Barcode</th>
+                                <th>Title</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                        [% FOREACH bundle_item IN missing_items %]
+                            <tr>
+                                <td>[% bundle_item.barcode | html %]</td>
+                                <td>[% INCLUDE 'biblio-title.inc' biblio=bundle_item.biblio %]</td>
+                            </tr>
+                        [% END %]
+                        </tbody>
+                        <tfoot>
+                        </tfoot>
+                    </table>
+                </div> <!-- /.modal-body -->
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="printModal btn btn-primary"><i class="fa fa-print"></i> Print</button>
+                </div> <!-- /.modal-footer -->
+            </div> <!-- /.modal-content -->
+        </div> <!-- /.modal-dialog -->
+    </div> <!-- /#bundleMissingModal -->
+    [% END %]
+
 [% MACRO jsinclude BLOCK %]
     [% INCLUDE 'datatables.inc' %]
     [% INCLUDE 'columns_settings.inc' %]
@@ -1364,8 +1531,83 @@
                 window.open("/cgi-bin/koha/members/printslip.pl?borrowernumber=" + borrowernumber + "&amp;print=checkinslip", "printwindow");
             });
 
+            // item bundles
+            $('#verify-items-bundle-contents-barcodes').on('input', function (ev) {
+                let char = ev.target.value.slice(-1);
+                if ( char.match(/\n/) ) {
+                    const barcodes = ev.target.value.split('\n').map(function(s) { return s.trim().toUpperCase() });
+                    const expected = [];
+                    let found = 0;
+                    $('#items-bundle-contents-table tbody > tr').each(function () {
+                        const barcode = this.getAttribute('data-barcode').toUpperCase();
+                        expected.push(barcode);
+                        if (barcodes.includes(barcode)) {
+                            this.classList.add('ok');
+                            found++;
+                        } else {
+                            this.classList.remove('ok');
+                        }
+                    });
+                    const last = barcodes[barcodes.length -2];
+                    const feedback = $('#bundle-feedback');
+                    let string;
+                    if ( !expected.includes(last) ) {
+                        feedback.fadeOut(100, function(){
+                            string = _("Unexpected: ") +last;
+                            feedback.addClass('alert-danger').removeClass('alert-success').html(string).fadeIn(100);
+                        });
+                    } else {
+                        feedback.fadeOut(100, function(){
+                            string = _("Varified: ")+last;
+                            feedback.addClass('alert-success').removeClass('alert-danger').html(string).fadeIn(100);
+                        });
+                    }
+                    $('#verify-progress').show();
+                    $('#verified').text(found);
+                    $('#expected').text(expected.length);
+                }
+            });
+
+            $('.bundle_remove').on('click', function() {
+                var component_itemnumber = $(this).data('itemnumber');
+                var host_itemnumber = $(this).data('hostnumber');
+                var alert = $(this).closest('div');
+                var unlink_item_url = "/api/v1/items/" + host_itemnumber + "/bundled_items/item/" + component_itemnumber;
+                $.ajax({
+                    type: "DELETE",
+                    url: unlink_item_url,
+                    success: function(){
+                        alert.remove();
+                    }
+                });
+            });
+
+            $('#items-bundle-contents-table').dataTable($.extend(true, {}, dataTablesDefaults, {
+                "bFilter": false,
+                "bPaginate": false,
+                "bInfo": false,
+                "order": [[ 1, 'asc' ], [ 0, 'asc' ]]
+            }));
+
+            // print modals
+            $('.modal.printable').on('shown.bs.modal', function() {
+                $('.modal-dialog', this).addClass('focused');
+                $('body').addClass('modalprinter');
+
+                if ($(this).hasClass('autoprint')) {
+                    window.print();
+                }
+            }).on('hidden.bs.modal', function() {
+                $('.modal-dialog', this).removeClass('focused');
+                $('body').removeClass('modalprinter');
+            });
+
+            $('.printModal').click(function() {
+                window.print();
+            });
         });
     </script>
+
 [% END %]
 
 [% INCLUDE 'intranet-bottom.inc' %]
