Bug 31095: Remove GetDebarments from circ/circulation.pl
This patch remove the use of GetDebarments from circ/circulation.pl,
replacing it with a reference to patron.restrictions in the template and
includes.

Test plan
1. Confirm that the 'Restrictions (x)' tab still appears on the checkout
   page for a user.
2. Confirm that the 'Restrictions (x)' tab count is correct
3. Confirm that the 'Restrictions (x)' tab table functions
4. Confirm that the 'Restrictions (x)' tab 'Add manual restriction' form
   works as expected

Signed-off-by: Nick Clemens <nick@bywatersolutions.com>

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/circ/circulation.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/circ/circulation.tt
@@ -869,7 +869,7 @@
                         [% END %]
 
                         <li>
-                            <a id="debarments-tab-link" href="#reldebarments">Restrictions ([% debarments.size || 0 | html %])</a>
+                            <a id="debarments-tab-link" href="#reldebarments">Restrictions ([% patron.restrictions.count || 0 | html %])</a>
                         </li>
 
                         [% SET enrollments = patron.get_club_enrollments %]
@@ -895,7 +895,7 @@
                         </div> <!-- /#clubs-tab -->
                     [% END %]
 
-                    [% INCLUDE borrower_debarments.inc %]
+                    [% INCLUDE "patron-restrictions-tab.inc" %]
 
                     <div id="reserves">
                         [% IF ( holds_count ) %]
