Bug 31095: Remove GetDebarments from members/moremember.pl
This patch removes the use of GetDebarments from members/moremember.pl
and replaces template references with patrons.restrictions and the new
includes introduced in the prior patch

Test plan
1. Confirm that the 'Restrictions (x)' tab still appears on the patron
   details page.
2. Confirm that the 'Restrictions (x)' tab count is correct
3. Confirm that the 'Restrictions (x)' tab table functions
4. Confirm that the 'Restrictions (x)' tab 'Add manual restriction' form
   works as expected

Signed-off-by: Nick Clemens <nick@bywatersolutions.com>

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/members/moremember.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/members/moremember.tt
@@ -698,7 +698,7 @@
                             [% END %]
 
                             <li>
-                                <a id="debarments-tab-link" href="#reldebarments">Restrictions ([% debarments.size || 0 | html %])</a>
+                                <a id="debarments-tab-link" href="#reldebarments">Restrictions ([% patron.restrictions.count | html %])</a>
                             </li>
 
                             [% SET enrollments = patron.get_club_enrollments %]
@@ -732,7 +732,7 @@
                             </div>
                         [% END %]
 
-                        [% INCLUDE borrower_debarments.inc %]
+                        [% INCLUDE 'patron-restrictions-tab.inc' %]
 
                         [% IF ( CAN_user_circulate_circulate_remaining_permissions ) %]
                             <div id="reserves">
