--- a/koha-tmpl/intranet-tmpl/prog/en/modules/reserve/request.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/reserve/request.tt
@@ -742,7 +742,7 @@
                                                     [% END # /IF force_hold_level %]
                                                 </td>
                                                 <td>
-                                                [% IF (itemloo.pickup_locations_count > 0) %]
+                                                [% IF (itemloo.pickup_locations_count > 0) || itemloo.override %]
                                                     <select name="item_pickup_[% itemloo.itemnumber | html %]" class="pickup_locations" style="width:100%;"
                                                             data-item-id="[% itemloo.itemnumber | html %]"
                                                             data-patron-id="[% patron.borrowernumber | html %]"
