Bug 31632: Add ability to link orders to suggestions when adding to basket from a file
This patch adds a new include for suggestions searching, and adds JS on the addorderiso2907 page
to allow linking new orders to suggestions while importing into a basket

To test:
 1 - Export or find a file of bibs
 2 - Stage the file using Tools->Stage MARC for Import
 3 - Find or create an open basket in acquisitions
 4 - Add to basket from the staged file
 5 - Select/check a record
 6 - Note new 'Suggestions' area
 7 - Click 'Link suggestions'
 8 - Search for suggestions - click 'Select'
 9 - Select button is gone
10 - Dismiss modal
11 - Suggestion is listed for this record
12 - Click 'Link suggestions'
13 - Confirm the suggestion cannot be chosen again
14 - Add another
15 - Dismiss the modal
16 - Click 'Remove' on the first suggestion
17 - Confirm it is removed
18 - Confirm you can now link it again
19 - Select budget etc and submit
20 - Confirm record linked to suggestions

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/acqui/addorderiso2709.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/acqui/addorderiso2709.tt
@@ -25,6 +25,7 @@
 <body id="acq_addorderiso2709" class="acq">
     [% INCLUDE 'header.inc' %]
     [% INCLUDE 'acquisitions-search.inc' %]
+    [% INCLUDE 'suggestions-search.inc' %]
 
     <nav id="breadcrumbs" aria-label="Breadcrumb" class="breadcrumb">
         <ol>
@@ -188,6 +189,21 @@
                                                     <li class="sort2">
                                                         <label for="sort2_record_[% biblio.import_record_id | html %]">Statistic 2: </label>
                                                         <input id="sort2_record_[% biblio.import_record_id | html %]" type="text" size="20" name="sort2" value="[% biblio.sort2 | html %]" />
+                                                    </li>
+                                                    <li class="suggestions">
+                                                        <fieldset>
+                                                            <legend>Suggestions</legend>
+                                                            <ul id="link_suggestions_[% biblio.import_record_id | html %]">
+                                                                [% FOREACH suggestion IN biblio.suggestions %]
+                                                                    <li>
+                                                                        <label for="attach_suggestion_record_[% biblio.import_record_id | html %]">Link suggestion: </label>
+                                                                        <input name="attach_suggestion_record_[% biblio.import_record_id | html %]" value="[% suggestion.suggestionid %]" type="checkbox">
+                                                                        <span>[% suggestion.title | html %] <em>[% suggestion.author | html %]</em> [% IF suggestion.isbn %]([% suggestion.isbn | html %])[% END %]</span>
+                                                                    </li>
+                                                                [% END %]
+                                                            </ul>
+                                                            <button type="button" class="add_suggestions btn btn-sm" data-title="[% biblio.citation | html %]" data-biblionumber="[% biblio.import_record_id | html %]">Link suggestions</button>
+                                                        </fieldset>
                                                     </li>
                                                 </ol>
                                             </div>
